# MC202

./: .gitattributes  .gitignore  README.md  notas.py  testes.sh
Lab01/: Makefile  aluno.c  lab01.c  main.c  professor.c
Lab02/: Makefile  lab02  lab02.c  ordem.h  vetor.c  vetor.h
Lab03/: Makefile  lab03.c  lista.c  lista.h  main  memoria.c  memoria.h
Lab04/: Makefile  fila.c  fila.h  lab04  lab04.c  participante.c  participante.h
Lab05/: Makefile  lab05.c  pilha.c  pilha.h
Lab06/: Makefile  fila_prioridade.c  fila_prioridade.h  lab06.c
Lab07/: Makefile  arv_binaria.c  arv_binaria.h  arv_gen.c  arv_gen.h  lab07.c
Lab08/: Makefile  abb.c  abb.h  lab08.c
Lab09/: Makefile  arv_treap.c  arv_treap.h  lab09.c
Lab10/: Makefile  conjhash.c  conjhash.h  conjhash_funchash.h  hash.c  (+2 more)
dsrs/: Cargo.toml  rustfmt.toml
dsrs/hint/: Cargo.toml
dsrs/hint/src/: conditions.rs  lib.rs  unreachable.rs
dsrs/mem/: Cargo.toml
dsrs/mem/src/: lib.rs  ptr.rs
dsrs/mem/src/alloc/: layout.rs  mod.rs
dsrs/mem/src/alloc/repr_c/: field_tuple.rs  mod.rs
dsrs/mem/src/layout/: field_tuple.rs  layout.rs  mod.rs
dsrs/mem/src/layout/repr_c/: field_tuple.rs  mod.rs
dsrs/mem/src/ptr/: mod.rs  nonnull.rs
dsrs/repr_c_derive/: Cargo.toml
dsrs/repr_c_derive/src/: derive.rs  lib.rs
dsrs/repr_c_derive/src/check/: attr.rs  attr_repr.rs  hints.rs  mod.rs  repr_hint.rs  result.rs  status.rs
dsrs/src/: lib.rs  main.rs
dsrs/src/lists/: mod.rs
dsrs/src/lists/linked_list/: impls.rs  list.rs  mod.rs  node.rs
dsrs/src/mem/: alloc.rs  layout.rs  mod.rs  nonnull.rs  repr_c.rs
(+160 files in other folders)
