[package]
name = "dsrs"
version = "0.1.0"
authors = ["Tiago de Paula <tiagodepalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "hint",
    "mem",
    "repr_c_derive"
]

[dependencies]
mem = { path = "mem" }
